<resources>
    <string name="app_name">My Calculator</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="clear">Clear</string>
    <string name="_0">0</string>
    <string name="_77">77</string>
    <string name="_">/</string>
    <string name="__">*</string>
    <string name="___">+</string>
    <string name="____">=</string>
    <string name="_____">-</string>
    <string name="smart_cal">Smart Cal</string>
    <string name="do_all_your_calculations">Do all your calculations</string>
</resources>
