<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn9"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_above="@+id/btn6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357"
        android:background="@drawable/white_onclickred"/>

    <Button
        android:id="@+id/btn8"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_above="@+id/btn5"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/btn9"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        android:background="@drawable/white_onclickred"/>

    <Button
        android:id="@+id/btn7"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_above="@+id/btn4"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/btn8"
        android:text="@string/_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        tools:layout_editor_absoluteY="200dp"
        android:background="@drawable/white_onclickred"/>

    <Button
        android:id="@+id/btndevide"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_above="@+id/btnmul"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/btn7"
        android:background="@drawable/red_onclickwhite"
        android:text="@string/_"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="226dp"
        tools:layout_editor_absoluteY="338dp" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_above="@+id/btn3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_6"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="338dp"
        android:background="@drawable/white_onclickred"/>

    <Button
        android:id="@+id/btn5"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_above="@+id/btn2"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/btn6"
        android:text="@string/_5"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="338dp"
        android:background="@drawable/white_onclickred"/>

    <Button
        android:id="@+id/btn4"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_above="@+id/btn1"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/btn5"
        android:text="@string/_4"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="402dp"
        android:background="@drawable/white_onclickred"/>

    <Button
        android:id="@+id/btnmul"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_above="@+id/btnadd"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/btn4"
        android:background="@drawable/red_onclickwhite"
        android:text="@string/__"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="402dp" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_above="@+id/btnclear"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_3"
        tools:layout_editor_absoluteX="207dp"
        tools:layout_editor_absoluteY="394dp"
        android:background="@drawable/white_onclickred"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_above="@+id/btn0"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/btn3"
        android:text="@string/_2"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="394dp"
        android:background="@drawable/white_onclickred"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_above="@+id/btnequel"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="2dp"
        android:layout_toEndOf="@+id/btn2"
        android:text="@string/_1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="538dp"
        android:background="@drawable/white_onclickred"/>

    <Button
        android:id="@+id/btnadd"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_above="@+id/btnsub"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@+id/btn1"
        android:background="@drawable/red_onclickwhite"
        android:text="@string/___"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="539dp" />

    <Button
        android:id="@+id/btnclear"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/red_onclickwhite"
        android:text="@string/clear"
        android:textColor="#0C0C0C"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="252dp"
        tools:layout_editor_absoluteY="466dp" />

    <Button
        android:id="@+id/btn0"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="104dp"
        android:layout_toEndOf="@+id/btnclear"
        android:background="@drawable/red_onclickwhite"
        android:text="@string/_0"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="239dp"
        tools:layout_editor_absoluteY="528dp" />

    <Button
        android:id="@+id/btnequel"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="104dp"
        android:layout_toEndOf="@+id/btn0"
        android:background="@drawable/red_onclickwhite"
        android:text="@string/____"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnsub"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838" />

    <Button
        android:id="@+id/btnsub"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="104dp"
        android:layout_toEndOf="@+id/btnequel"
        android:background="@drawable/red_onclickwhite"
        android:text="@string/_____"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_above="@+id/tvControl"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/stroke_black"
        android:ellipsize="none"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="96dp" />

    <TextView
        android:id="@+id/tvControl"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_above="@+id/btn7"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/stroke_black"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/tvDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:elevation="2dp"
        android:src="@drawable/ic_baseline_copyright_24px"/>
</RelativeLayout>